// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render correctly loading 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.cache-17y8khh-StyledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #4f0599;
  color: #ffffff;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-17y8khh-StyledButton:hover,
.cache-17y8khh-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-17y8khh-StyledButton:hover,
.cache-17y8khh-StyledButton:focus {
  color: #ffffff;
  background-color: #420480;
}

.cache-17y8khh-StyledButton:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-i4evwh-StyledIconContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: 8px;
  pointer-events: none;
}

.cache-gqzzce-Loader {
  -webkit-animation: animation-0 0.75s linear infinite;
  animation: animation-0 0.75s linear infinite;
}

.cache-11f05l0-Loader {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-17y8khh-StyledButton"
    type="button"
  >
    <div
      class="cache-i4evwh-StyledIconContainer em6gco82"
    >
      <svg
        aria-label="Loading"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="20"
        aria-valuetext="20%"
        class="cache-gqzzce-Loader"
        role="progressbar"
        style="height: 1em; width: 1em;"
        viewBox="0 0 100 100"
      >
        <circle
          cx="50"
          cy="50"
          fill="none"
          r="42"
          stroke="transparent"
          stroke-width="16"
        />
        <circle
          class="cache-11f05l0-Loader"
          cx="50"
          cy="50"
          fill="none"
          r="42"
          stroke="currentColor"
          stroke-dasharray="263.89378290154264"
          stroke-dashoffset="211.11502632123413"
          stroke-linecap="round"
          stroke-width="16"
        />
      </svg>
    </div>
    <div
      class="cache-m245rk-StyledContent em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button should render correctly loading with an icon 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.cache-17y8khh-StyledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #4f0599;
  color: #ffffff;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-17y8khh-StyledButton:hover,
.cache-17y8khh-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-17y8khh-StyledButton:hover,
.cache-17y8khh-StyledButton:focus {
  color: #ffffff;
  background-color: #420480;
}

.cache-17y8khh-StyledButton:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-i4evwh-StyledIconContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: 8px;
  pointer-events: none;
}

.cache-gqzzce-Loader {
  -webkit-animation: animation-0 0.75s linear infinite;
  animation: animation-0 0.75s linear infinite;
}

.cache-11f05l0-Loader {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

.cache-n16c8f-StyledIconContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: 8px;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-17y8khh-StyledButton"
    type="button"
  >
    <div
      class="cache-i4evwh-StyledIconContainer em6gco82"
    >
      <svg
        aria-label="Loading"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="20"
        aria-valuetext="20%"
        class="cache-gqzzce-Loader"
        role="progressbar"
        style="height: 1em; width: 1em;"
        viewBox="0 0 100 100"
      >
        <circle
          cx="50"
          cy="50"
          fill="none"
          r="42"
          stroke="transparent"
          stroke-width="16"
        />
        <circle
          class="cache-11f05l0-Loader"
          cx="50"
          cy="50"
          fill="none"
          r="42"
          stroke="currentColor"
          stroke-dasharray="263.89378290154264"
          stroke-dashoffset="211.11502632123413"
          stroke-linecap="round"
          stroke-width="16"
        />
      </svg>
    </div>
    <div
      class="cache-m245rk-StyledContent em6gco81"
    >
      Hello
    </div>
    <div
      class="cache-n16c8f-StyledIconContainer em6gco82"
    >
      <svg
        aria-label="Loading"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="20"
        aria-valuetext="20%"
        class="cache-gqzzce-Loader"
        role="progressbar"
        style="height: 1em; width: 1em;"
        viewBox="0 0 100 100"
      >
        <circle
          cx="50"
          cy="50"
          fill="none"
          r="42"
          stroke="transparent"
          stroke-width="16"
        />
        <circle
          class="cache-11f05l0-Loader"
          cx="50"
          cy="50"
          fill="none"
          r="42"
          stroke="currentColor"
          stroke-dasharray="263.89378290154264"
          stroke-dashoffset="211.11502632123413"
          stroke-linecap="round"
          stroke-width="16"
        />
      </svg>
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button should render correctly when acting as Link 1`] = `
<DocumentFragment>
  .cache-3rsblc-StyledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #4f0599;
  color: #ffffff;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-3rsblc-StyledButton:hover,
.cache-3rsblc-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-3rsblc-StyledButton:hover,
.cache-3rsblc-StyledButton:focus {
  color: #ffffff;
  background-color: #420480;
}

.cache-3rsblc-StyledButton:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<a
    aria-disabled="false"
    class="em6gco80 cache-3rsblc-StyledButton"
    href="/"
  >
    <div
      class="cache-m245rk-StyledContent em6gco81"
    >
      Hello
    </div>
  </a>
</DocumentFragment>
`;

exports[`Button should render correctly when acting as Link with disabled props 1`] = `
<DocumentFragment>
  .cache-qsjx3-StyledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #4f0599;
  color: #ffffff;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  cursor: default;
  pointer-events: none;
  color: #d4dae7;
  background-color: #f6f6f8;
  border-color: #fcfcfd;
  box-shadow: none;
}

.cache-qsjx3-StyledButton:hover,
.cache-qsjx3-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-qsjx3-StyledButton:hover,
.cache-qsjx3-StyledButton:focus {
  color: #ffffff;
  background-color: #420480;
}

.cache-qsjx3-StyledButton:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="true"
    class="em6gco80 cache-qsjx3-StyledButton"
    disabled=""
    to="/"
    type="button"
  >
    <div
      class="cache-m245rk-StyledContent em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button should render correctly when acting as dom link 1`] = `
<DocumentFragment>
  .cache-17y8khh-StyledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #4f0599;
  color: #ffffff;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-17y8khh-StyledButton:hover,
.cache-17y8khh-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-17y8khh-StyledButton:hover,
.cache-17y8khh-StyledButton:focus {
  color: #ffffff;
  background-color: #420480;
}

.cache-17y8khh-StyledButton:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<a
    aria-disabled="false"
    class="em6gco80 cache-17y8khh-StyledButton"
    href="/"
  >
    <div
      class="cache-m245rk-StyledContent em6gco81"
    >
      Hello
    </div>
  </a>
</DocumentFragment>
`;

exports[`Button should render correctly when disabled 1`] = `
<DocumentFragment>
  .cache-qsjx3-StyledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #4f0599;
  color: #ffffff;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  cursor: default;
  pointer-events: none;
  color: #d4dae7;
  background-color: #f6f6f8;
  border-color: #fcfcfd;
  box-shadow: none;
}

.cache-qsjx3-StyledButton:hover,
.cache-qsjx3-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-qsjx3-StyledButton:hover,
.cache-qsjx3-StyledButton:focus {
  color: #ffffff;
  background-color: #420480;
}

.cache-qsjx3-StyledButton:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="true"
    class="em6gco80 cache-qsjx3-StyledButton"
    disabled=""
    type="button"
  >
    <div
      class="cache-m245rk-StyledContent em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button should render correctly when extendable 1`] = `
<DocumentFragment>
  .cache-1bqtgck-StyledButton-StyledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #4f0599;
  color: #ffffff;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.cache-1bqtgck-StyledButton-StyledButton:hover,
.cache-1bqtgck-StyledButton-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1bqtgck-StyledButton-StyledButton:hover,
.cache-1bqtgck-StyledButton-StyledButton:focus {
  color: #ffffff;
  background-color: #420480;
}

.cache-1bqtgck-StyledButton-StyledButton:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-1bqtgck-StyledButton-StyledButton .em6gco81 {
  -webkit-transition: max-width 450ms ease,padding 150ms ease,margin 150ms ease;
  transition: max-width 450ms ease,padding 150ms ease,margin 150ms ease;
  max-width: 0;
  margin-right: 0;
  padding-left: 0;
  overflow: hidden;
}

.cache-1bqtgck-StyledButton-StyledButton:focus .em6gco81,
.cache-1bqtgck-StyledButton-StyledButton:hover .em6gco81 {
  max-width: 275px;
  margin-right: 8px;
  padding-left: 8px;
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-1bqtgck-StyledButton-StyledButton"
    type="button"
  >
    <div
      class="cache-m245rk-StyledContent em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button should render correctly when extendable with an icon 1`] = `
<DocumentFragment>
  .cache-1av8ufu-StyledButton-StyledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #4f0599;
  color: #ffffff;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.cache-1av8ufu-StyledButton-StyledButton:hover,
.cache-1av8ufu-StyledButton-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1av8ufu-StyledButton-StyledButton:hover,
.cache-1av8ufu-StyledButton-StyledButton:focus {
  color: #ffffff;
  background-color: #420480;
}

.cache-1av8ufu-StyledButton-StyledButton:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-1av8ufu-StyledButton-StyledButton .em6gco81 {
  -webkit-transition: max-width 450ms ease,padding 150ms ease,margin 150ms ease;
  transition: max-width 450ms ease,padding 150ms ease,margin 150ms ease;
  max-width: 0;
  margin-right: 0;
  padding-right: 0;
  overflow: hidden;
}

.cache-1av8ufu-StyledButton-StyledButton:focus .em6gco81,
.cache-1av8ufu-StyledButton-StyledButton:hover .em6gco81 {
  max-width: 275px;
  margin-right: 8px;
  padding-right: 8x;
}

.cache-vpgnqw-StyledIconContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: 0px;
  pointer-events: none;
}

.cache-5xampy-StyledIcon-sizeStyles {
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.cache-5xampy-StyledIcon-sizeStyles.cache-5xampy-StyledIcon-sizeStyles {
  vertical-align: middle;
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-1av8ufu-StyledButton-StyledButton"
    type="button"
  >
    <div
      class="cache-vpgnqw-StyledIconContainer em6gco82"
    >
      <svg
        class="sc-ui-icon etwatq50 cache-5xampy-StyledIcon-sizeStyles"
        viewBox="0 0 24 24"
      >
        <path
          d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
        />
      </svg>
    </div>
    <div
      class="cache-m245rk-StyledContent em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button should render correctly with a custom Icon 1`] = `
<DocumentFragment>
  .cache-17y8khh-StyledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #4f0599;
  color: #ffffff;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-17y8khh-StyledButton:hover,
.cache-17y8khh-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-17y8khh-StyledButton:hover,
.cache-17y8khh-StyledButton:focus {
  color: #ffffff;
  background-color: #420480;
}

.cache-17y8khh-StyledButton:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-1sybl11-StyledIconContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-17y8khh-StyledButton"
    type="button"
  >
    <div
      class="cache-1sybl11-StyledIconContainer em6gco82"
    >
      IconMock
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button should render correctly with a rounded action button 1`] = `
<DocumentFragment>
  .cache-1v5dmro-StyledButton-StyledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #4f0599;
  color: #ffffff;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  width: 32px;
  height: 32px;
  padding: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-radius: 16px;
}

.cache-1v5dmro-StyledButton-StyledButton:hover,
.cache-1v5dmro-StyledButton-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1v5dmro-StyledButton-StyledButton:hover,
.cache-1v5dmro-StyledButton-StyledButton:focus {
  color: #ffffff;
  background-color: #420480;
}

.cache-1v5dmro-StyledButton-StyledButton:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-1v5dmro-StyledButton-StyledButton>svg {
  pointer-events: none;
}

.cache-1sybl11-StyledIconContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  pointer-events: none;
}

.cache-5xampy-StyledIcon-sizeStyles {
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.cache-5xampy-StyledIcon-sizeStyles.cache-5xampy-StyledIcon-sizeStyles {
  vertical-align: middle;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-1v5dmro-StyledButton-StyledButton"
    type="button"
  >
    <div
      class="cache-1sybl11-StyledIconContainer em6gco82"
    >
      <svg
        class="sc-ui-icon etwatq50 cache-5xampy-StyledIcon-sizeStyles"
        viewBox="0 0 24 24"
      >
        <path
          d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
        />
      </svg>
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button should render correctly with a tooltip 1`] = `
<DocumentFragment>
  .cache-17y8khh-StyledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #4f0599;
  color: #ffffff;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-17y8khh-StyledButton:hover,
.cache-17y8khh-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-17y8khh-StyledButton:hover,
.cache-17y8khh-StyledButton:focus {
  color: #ffffff;
  background-color: #420480;
}

.cache-17y8khh-StyledButton:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-i4evwh-StyledIconContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: 8px;
  pointer-events: none;
}

.cache-5xampy-StyledIcon-sizeStyles {
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.cache-5xampy-StyledIcon-sizeStyles.cache-5xampy-StyledIcon-sizeStyles {
  vertical-align: middle;
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<div
    aria-describedby="test"
    tabindex="0"
  >
    <button
      aria-describedby="test"
      aria-disabled="false"
      class="em6gco80 cache-17y8khh-StyledButton"
      type="button"
    >
      <div
        class="cache-i4evwh-StyledIconContainer em6gco82"
      >
        <svg
          class="sc-ui-icon etwatq50 cache-5xampy-StyledIcon-sizeStyles"
          viewBox="0 0 24 24"
        >
          <path
            d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
          />
        </svg>
      </div>
      <div
        class="cache-m245rk-StyledContent em6gco81"
      >
        Hello
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Button should render correctly with an action button 1`] = `
<DocumentFragment>
  .cache-dglze6-StyledButton-StyledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #4f0599;
  color: #ffffff;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  width: 32px;
  height: 32px;
  padding: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.cache-dglze6-StyledButton-StyledButton:hover,
.cache-dglze6-StyledButton-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-dglze6-StyledButton-StyledButton:hover,
.cache-dglze6-StyledButton-StyledButton:focus {
  color: #ffffff;
  background-color: #420480;
}

.cache-dglze6-StyledButton-StyledButton:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-dglze6-StyledButton-StyledButton>svg {
  pointer-events: none;
}

.cache-1sybl11-StyledIconContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  pointer-events: none;
}

.cache-5xampy-StyledIcon-sizeStyles {
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.cache-5xampy-StyledIcon-sizeStyles.cache-5xampy-StyledIcon-sizeStyles {
  vertical-align: middle;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-dglze6-StyledButton-StyledButton"
    type="button"
  >
    <div
      class="cache-1sybl11-StyledIconContainer em6gco82"
    >
      <svg
        class="sc-ui-icon etwatq50 cache-5xampy-StyledIcon-sizeStyles"
        viewBox="0 0 24 24"
      >
        <path
          d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
        />
      </svg>
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button should render correctly with an icon on the right 1`] = `
<DocumentFragment>
  .cache-17y8khh-StyledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #4f0599;
  color: #ffffff;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-17y8khh-StyledButton:hover,
.cache-17y8khh-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-17y8khh-StyledButton:hover,
.cache-17y8khh-StyledButton:focus {
  color: #ffffff;
  background-color: #420480;
}

.cache-17y8khh-StyledButton:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

.cache-n16c8f-StyledIconContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: 8px;
  pointer-events: none;
}

.cache-5xampy-StyledIcon-sizeStyles {
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.cache-5xampy-StyledIcon-sizeStyles.cache-5xampy-StyledIcon-sizeStyles {
  vertical-align: middle;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-17y8khh-StyledButton"
    type="button"
  >
    <div
      class="cache-m245rk-StyledContent em6gco81"
    >
      Hello
    </div>
    <div
      class="cache-n16c8f-StyledIconContainer em6gco82"
    >
      <svg
        class="sc-ui-icon etwatq50 cache-5xampy-StyledIcon-sizeStyles"
        viewBox="0 0 24 24"
      >
        <path
          d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
        />
      </svg>
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button should render correctly without a children 1`] = `
<DocumentFragment>
  .cache-17y8khh-StyledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #4f0599;
  color: #ffffff;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-17y8khh-StyledButton:hover,
.cache-17y8khh-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-17y8khh-StyledButton:hover,
.cache-17y8khh-StyledButton:focus {
  color: #ffffff;
  background-color: #420480;
}

.cache-17y8khh-StyledButton:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

<button
    aria-disabled="false"
    class="em6gco80 cache-17y8khh-StyledButton"
    type="button"
  />
</DocumentFragment>
`;

exports[`Button should render correctly without a children and an icon 1`] = `
<DocumentFragment>
  .cache-17y8khh-StyledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #4f0599;
  color: #ffffff;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-17y8khh-StyledButton:hover,
.cache-17y8khh-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-17y8khh-StyledButton:hover,
.cache-17y8khh-StyledButton:focus {
  color: #ffffff;
  background-color: #420480;
}

.cache-17y8khh-StyledButton:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-1sybl11-StyledIconContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  pointer-events: none;
}

.cache-5xampy-StyledIcon-sizeStyles {
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.cache-5xampy-StyledIcon-sizeStyles.cache-5xampy-StyledIcon-sizeStyles {
  vertical-align: middle;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-17y8khh-StyledButton"
    type="button"
  >
    <div
      class="cache-1sybl11-StyledIconContainer em6gco82"
    >
      <svg
        class="sc-ui-icon etwatq50 cache-5xampy-StyledIcon-sizeStyles"
        viewBox="0 0 24 24"
      >
        <path
          d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
        />
      </svg>
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button size render large 1`] = `
<DocumentFragment>
  .cache-17y8khh-StyledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #4f0599;
  color: #ffffff;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-17y8khh-StyledButton:hover,
.cache-17y8khh-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-17y8khh-StyledButton:hover,
.cache-17y8khh-StyledButton:focus {
  color: #ffffff;
  background-color: #420480;
}

.cache-17y8khh-StyledButton:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-17y8khh-StyledButton"
    type="button"
  >
    <div
      class="cache-m245rk-StyledContent em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button size render medium 1`] = `
<DocumentFragment>
  .cache-vuk209-StyledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #4f0599;
  color: #ffffff;
  font-size: 16px;
  line-height: 24px;
  padding: 8px 16px;
}

.cache-vuk209-StyledButton:hover,
.cache-vuk209-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-vuk209-StyledButton:hover,
.cache-vuk209-StyledButton:focus {
  color: #ffffff;
  background-color: #420480;
}

.cache-vuk209-StyledButton:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-vuk209-StyledButton"
    type="button"
  >
    <div
      class="cache-m245rk-StyledContent em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button size render small 1`] = `
<DocumentFragment>
  .cache-1xqs67b-StyledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #4f0599;
  color: #ffffff;
  font-size: 16px;
  line-height: 16px;
  padding: 8px 16px;
}

.cache-1xqs67b-StyledButton:hover,
.cache-1xqs67b-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1xqs67b-StyledButton:hover,
.cache-1xqs67b-StyledButton:focus {
  color: #ffffff;
  background-color: #420480;
}

.cache-1xqs67b-StyledButton:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-1xqs67b-StyledButton"
    type="button"
  >
    <div
      class="cache-m245rk-StyledContent em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button size render xsmall 1`] = `
<DocumentFragment>
  .cache-z16us7-StyledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #4f0599;
  color: #ffffff;
  font-size: 14px;
  line-height: 20px;
  padding: 8px;
}

.cache-z16us7-StyledButton:hover,
.cache-z16us7-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-z16us7-StyledButton:hover,
.cache-z16us7-StyledButton:focus {
  color: #ffffff;
  background-color: #420480;
}

.cache-z16us7-StyledButton:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-z16us7-StyledButton"
    type="button"
  >
    <div
      class="cache-m245rk-StyledContent em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button size render xxsmall 1`] = `
<DocumentFragment>
  .cache-8tvhfs-StyledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #4f0599;
  color: #ffffff;
  font-size: 12px;
}

.cache-8tvhfs-StyledButton:hover,
.cache-8tvhfs-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-8tvhfs-StyledButton:hover,
.cache-8tvhfs-StyledButton:focus {
  color: #ffffff;
  background-color: #420480;
}

.cache-8tvhfs-StyledButton:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-8tvhfs-StyledButton"
    type="button"
  >
    <div
      class="cache-m245rk-StyledContent em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button variant render info 1`] = `
<DocumentFragment>
  .cache-p79ase-StyledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #e1ebff;
  color: #1a4dbf;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-p79ase-StyledButton:hover,
.cache-p79ase-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-p79ase-StyledButton:hover,
.cache-p79ase-StyledButton:focus {
  color: #1a4dbf;
  background-color: #c7daff;
}

.cache-p79ase-StyledButton:focus {
  box-shadow: 0 0 0 2px rgba(225,235,255,0.25);
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-p79ase-StyledButton"
    type="button"
  >
    <div
      class="cache-m245rk-StyledContent em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button variant render info-bordered 1`] = `
<DocumentFragment>
  .cache-ios4n1-StyledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  border: 1px solid #3f6ed8;
  background-color: #ffffff;
  color: #3f6ed8;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-ios4n1-StyledButton:hover,
.cache-ios4n1-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-ios4n1-StyledButton svg {
  fill: #3f6ed8;
  pointer-events: none;
}

.cache-ios4n1-StyledButton:hover,
.cache-ios4n1-StyledButton:focus {
  border: 1px solid #3f6ed8;
  color: #ffffff;
  background-color: #3f6ed8;
}

.cache-ios4n1-StyledButton:hover svg,
.cache-ios4n1-StyledButton:focus svg {
  fill: #ffffff;
}

.cache-ios4n1-StyledButton:focus {
  box-shadow: 0 0 0 2px rgba(63,110,216,0.25);
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-ios4n1-StyledButton"
    type="button"
  >
    <div
      class="cache-m245rk-StyledContent em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button variant render link 1`] = `
<DocumentFragment>
  .cache-1a9jziz-StyledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #ffffff;
  color: #3f6ed8;
  vertical-align: baseline;
  font-weight: 400;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-1a9jziz-StyledButton:hover,
.cache-1a9jziz-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1a9jziz-StyledButton:hover,
.cache-1a9jziz-StyledButton:focus {
  color: #1e4293;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-1a9jziz-StyledButton"
    type="button"
  >
    <div
      class="cache-m245rk-StyledContent em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button variant render primary 1`] = `
<DocumentFragment>
  .cache-17y8khh-StyledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #4f0599;
  color: #ffffff;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-17y8khh-StyledButton:hover,
.cache-17y8khh-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-17y8khh-StyledButton:hover,
.cache-17y8khh-StyledButton:focus {
  color: #ffffff;
  background-color: #420480;
}

.cache-17y8khh-StyledButton:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-17y8khh-StyledButton"
    type="button"
  >
    <div
      class="cache-m245rk-StyledContent em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button variant render primary-bordered 1`] = `
<DocumentFragment>
  .cache-l1wjn1-StyledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  border: 1px solid #4f0599;
  background-color: #ffffff;
  color: #4f0599;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-l1wjn1-StyledButton:hover,
.cache-l1wjn1-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-l1wjn1-StyledButton svg {
  fill: #4f0599;
  pointer-events: none;
}

.cache-l1wjn1-StyledButton:hover,
.cache-l1wjn1-StyledButton:focus {
  border: 1px solid #4f0599;
  color: #ffffff;
  background-color: #4f0599;
}

.cache-l1wjn1-StyledButton:hover svg,
.cache-l1wjn1-StyledButton:focus svg {
  fill: #ffffff;
}

.cache-l1wjn1-StyledButton:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-l1wjn1-StyledButton"
    type="button"
  >
    <div
      class="cache-m245rk-StyledContent em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button variant render primary-soft-bordered 1`] = `
<DocumentFragment>
  .cache-1uo82bb-StyledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  border: 1px solid #b2b6c3;
  background-color: #ffffff;
  color: #b2b6c3;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-1uo82bb-StyledButton:hover,
.cache-1uo82bb-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1uo82bb-StyledButton svg {
  fill: #b2b6c3;
  pointer-events: none;
}

.cache-1uo82bb-StyledButton:hover,
.cache-1uo82bb-StyledButton:focus {
  border: 1px solid #4f0599;
  color: #ffffff;
  background-color: #4f0599;
}

.cache-1uo82bb-StyledButton:hover svg,
.cache-1uo82bb-StyledButton:focus svg {
  fill: #ffffff;
}

.cache-1uo82bb-StyledButton:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-1uo82bb-StyledButton"
    type="button"
  >
    <div
      class="cache-m245rk-StyledContent em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button variant render secondary 1`] = `
<DocumentFragment>
  .cache-kmo85u-StyledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #f6f6f8;
  color: #4a4f62;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-kmo85u-StyledButton:hover,
.cache-kmo85u-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-kmo85u-StyledButton:hover,
.cache-kmo85u-StyledButton:focus {
  color: #4a4f62;
  background-color: #e8e8ed;
}

.cache-kmo85u-StyledButton:focus {
  box-shadow: 0 0 0 2px rgba(246,246,248,0.25);
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-kmo85u-StyledButton"
    type="button"
  >
    <div
      class="cache-m245rk-StyledContent em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button variant render secondary-bordered 1`] = `
<DocumentFragment>
  .cache-1uo82bb-StyledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  border: 1px solid #b2b6c3;
  background-color: #ffffff;
  color: #b2b6c3;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-1uo82bb-StyledButton:hover,
.cache-1uo82bb-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1uo82bb-StyledButton svg {
  fill: #b2b6c3;
  pointer-events: none;
}

.cache-1uo82bb-StyledButton:hover,
.cache-1uo82bb-StyledButton:focus {
  border: 1px solid #4f0599;
  color: #ffffff;
  background-color: #4f0599;
}

.cache-1uo82bb-StyledButton:hover svg,
.cache-1uo82bb-StyledButton:focus svg {
  fill: #ffffff;
}

.cache-1uo82bb-StyledButton:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-1uo82bb-StyledButton"
    type="button"
  >
    <div
      class="cache-m245rk-StyledContent em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button variant render success 1`] = `
<DocumentFragment>
  .cache-um0kwk-StyledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #22c8a2;
  color: #ffffff;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-um0kwk-StyledButton:hover,
.cache-um0kwk-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-um0kwk-StyledButton:hover,
.cache-um0kwk-StyledButton:focus {
  color: #ffffff;
  background-color: #1eb290;
}

.cache-um0kwk-StyledButton:focus {
  box-shadow: 0 0 0 2px rgba(34,200,162,0.25);
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-um0kwk-StyledButton"
    type="button"
  >
    <div
      class="cache-m245rk-StyledContent em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button variant render success-bordered 1`] = `
<DocumentFragment>
  .cache-1slaywa-StyledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  border: 1px solid #22c8a2;
  background-color: #ffffff;
  color: #22c8a2;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-1slaywa-StyledButton:hover,
.cache-1slaywa-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1slaywa-StyledButton svg {
  fill: #22c8a2;
  pointer-events: none;
}

.cache-1slaywa-StyledButton:hover,
.cache-1slaywa-StyledButton:focus {
  border: 1px solid #22c8a2;
  color: #ffffff;
  background-color: #22c8a2;
}

.cache-1slaywa-StyledButton:hover svg,
.cache-1slaywa-StyledButton:focus svg {
  fill: #ffffff;
}

.cache-1slaywa-StyledButton:focus {
  box-shadow: 0 0 0 2px rgba(34,200,162,0.25);
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-1slaywa-StyledButton"
    type="button"
  >
    <div
      class="cache-m245rk-StyledContent em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button variant render success-soft-bordered 1`] = `
<DocumentFragment>
  .cache-m4ioyl-StyledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  border: 1px solid #b2b6c3;
  background-color: #ffffff;
  color: #b2b6c3;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-m4ioyl-StyledButton:hover,
.cache-m4ioyl-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-m4ioyl-StyledButton svg {
  fill: #b2b6c3;
  pointer-events: none;
}

.cache-m4ioyl-StyledButton:hover,
.cache-m4ioyl-StyledButton:focus {
  border: 1px solid #22c8a2;
  color: #ffffff;
  background-color: #22c8a2;
}

.cache-m4ioyl-StyledButton:hover svg,
.cache-m4ioyl-StyledButton:focus svg {
  fill: #ffffff;
}

.cache-m4ioyl-StyledButton:focus {
  box-shadow: 0 0 0 2px rgba(34,200,162,0.25);
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-m4ioyl-StyledButton"
    type="button"
  >
    <div
      class="cache-m245rk-StyledContent em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button variant render transparent 1`] = `
<DocumentFragment>
  .cache-9skjj0-StyledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: transparent;
  color: #4a4f62;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-9skjj0-StyledButton:hover,
.cache-9skjj0-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-9skjj0-StyledButton"
    type="button"
  >
    <div
      class="cache-m245rk-StyledContent em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button variant render warning 1`] = `
<DocumentFragment>
  .cache-84uzf6-StyledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #dd3252;
  color: #ffffff;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-84uzf6-StyledButton:hover,
.cache-84uzf6-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-84uzf6-StyledButton:hover,
.cache-84uzf6-StyledButton:focus {
  color: #ffffff;
  background-color: #d32344;
}

.cache-84uzf6-StyledButton:focus {
  box-shadow: 0 0 0 2px rgba(221,50,82,0.25);
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-84uzf6-StyledButton"
    type="button"
  >
    <div
      class="cache-m245rk-StyledContent em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button variant render warning-bordered 1`] = `
<DocumentFragment>
  .cache-kl48ht-StyledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  border: 1px solid #a6102d;
  background-color: #ffffff;
  color: #a6102d;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-kl48ht-StyledButton:hover,
.cache-kl48ht-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-kl48ht-StyledButton svg {
  fill: #a6102d;
  pointer-events: none;
}

.cache-kl48ht-StyledButton:hover,
.cache-kl48ht-StyledButton:focus {
  border: 1px solid #dd3252;
  color: #ffffff;
  background-color: #dd3252;
}

.cache-kl48ht-StyledButton:hover svg,
.cache-kl48ht-StyledButton:focus svg {
  fill: #ffffff;
}

.cache-kl48ht-StyledButton:focus {
  box-shadow: 0 0 0 2px rgba(221,50,82,0.25);
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-kl48ht-StyledButton"
    type="button"
  >
    <div
      class="cache-m245rk-StyledContent em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button variant render warning-soft-bordered 1`] = `
<DocumentFragment>
  .cache-yd0ki6-StyledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  border: 1px solid #b2b6c3;
  background-color: #ffffff;
  color: #b2b6c3;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-yd0ki6-StyledButton:hover,
.cache-yd0ki6-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-yd0ki6-StyledButton svg {
  fill: #b2b6c3;
  pointer-events: none;
}

.cache-yd0ki6-StyledButton:hover,
.cache-yd0ki6-StyledButton:focus {
  border: 1px solid #dd3252;
  color: #ffffff;
  background-color: #dd3252;
}

.cache-yd0ki6-StyledButton:hover svg,
.cache-yd0ki6-StyledButton:focus svg {
  fill: #ffffff;
}

.cache-yd0ki6-StyledButton:focus {
  box-shadow: 0 0 0 2px rgba(221,50,82,0.25);
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-yd0ki6-StyledButton"
    type="button"
  >
    <div
      class="cache-m245rk-StyledContent em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;
